--- a/GitHub4WinRT.App/GitHub4WinRT.App.csproj
+++ b/GitHub4WinRT.App/GitHub4WinRT.App.csproj
@@ -126,6 +126,7 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Header.png" />
     <Content Include="Assets\Logo.png" />
     <Content Include="Assets\SmallLogo.png" />
     <Content Include="Assets\SplashScreen.png" />
